[gd_scene load_steps=14 format=3 uid="uid://bdyt18qrq6ne1"]

[ext_resource type="Script" uid="uid://ucyeyjm2m8kc" path="res://GameScenes/UI/main_menu_ui.gd" id="1_5scu0"]
[ext_resource type="FontFile" uid="uid://bovi0c1aecn1d" path="res://Fonts/Xirod.otf" id="1_mcyb3"]
[ext_resource type="Theme" uid="uid://caw1xmgv8ypp5" path="res://Fonts/ButtonTheme.tres" id="2_5scu0"]
[ext_resource type="Shader" uid="uid://jstwmauhr8e3" path="res://Shaders/BalatroNoiseWarp.gdshader" id="2_u0thu"]
[ext_resource type="Texture2D" uid="uid://dvyasrxem1qj5" path="res://Sprites/Worm.png" id="3_tcsvs"]

[sub_resource type="Gradient" id="Gradient_tcsvs"]
offsets = PackedFloat32Array(0, 0.124528304, 0.73207545, 0.84456927, 1)
colors = PackedColorArray(0.92156863, 0.92941177, 0.9137255, 1, 0.03529412, 0.039215688, 0.078431375, 1, 0.45882353, 0.14117648, 0.21960784, 1, 0.64705884, 0.1882353, 0.1882353, 1, 0.92156863, 0.92941177, 0.9137255, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_u0thu"]
noise_type = 5
seed = 1
cellular_return_type = 0
domain_warp_amplitude = 50.0
domain_warp_fractal_octaves = 10

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tcsvs"]
width = 640
height = 360
noise = SubResource("FastNoiseLite_u0thu")
color_ramp = SubResource("Gradient_tcsvs")
seamless = true
seamless_blend_skirt = 0.3

[sub_resource type="Gradient" id="Gradient_u0thu"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_e24kl"]
noise_type = 0
frequency = 0.003
fractal_octaves = 1
domain_warp_enabled = true
domain_warp_frequency = 0.03
domain_warp_fractal_type = 0
domain_warp_fractal_octaves = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0nny5"]
width = 640
height = 360
noise = SubResource("FastNoiseLite_e24kl")
color_ramp = SubResource("Gradient_u0thu")
seamless = true
seamless_blend_skirt = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tcsvs"]
shader = ExtResource("2_u0thu")
shader_parameter/mainNoise = SubResource("NoiseTexture2D_tcsvs")
shader_parameter/warpNoise = SubResource("NoiseTexture2D_0nny5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mcyb3"]
bg_color = Color(0.08235294, 0.11372549, 0.15686275, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.03529412, 0.039215688, 0.078431375, 1)
corner_radius_top_left = 50
corner_radius_bottom_right = 50
shadow_size = 8
shadow_offset = Vector2(8, 8)

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5scu0")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tcsvs")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WormImage" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 135.0
offset_top = 162.0
offset_right = 262.0
offset_bottom = 226.0
scale = Vector2(4, 4)
texture = ExtResource("3_tcsvs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.39215687)
theme_override_constants/shadow_outline_size = 5
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("1_mcyb3")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[pulse freq=0.2 color=#a8b5b2 ease=-2.0][tornado radius=3.0 freq=2.0 connected=1][wave amp=20.0 freq=1.0 connected=1][center]Worm  World"
fit_content = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 4

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme = ExtResource("2_5scu0")
text = "Play"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme = ExtResource("2_5scu0")
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme = ExtResource("2_5scu0")
text = "Quit"

[node name="Settings" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 75

[node name="Panel" type="Panel" parent="Settings"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mcyb3")

[node name="MarginContainer" type="MarginContainer" parent="Settings/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/Panel/MarginContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="Settings/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mcyb3")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="Master" type="Label" parent="Settings/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_mcyb3")
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Settings/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
value = 100.0

[node name="Sound" type="Label" parent="Settings/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_mcyb3")
text = "Sound Effect Volume"

[node name="SoundSlider" type="HSlider" parent="Settings/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
value = 100.0

[node name="Music" type="Label" parent="Settings/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_mcyb3")
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Settings/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
value = 100.0

[node name="SettingsExit" type="Button" parent="Settings/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("2_5scu0")
theme_override_fonts/font = ExtResource("1_mcyb3")
theme_override_font_sizes/font_size = 16
text = "X"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="Settings/Panel/MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Settings/Panel/MarginContainer/VBoxContainer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="value_changed" from="Settings/Panel/MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="Settings/Panel/MarginContainer/SettingsExit" to="." method="_on_settings_exit_pressed"]
